<resources>
    <string name="app_name">Flag Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Flag Quiz game</string>
    <string name="button_start">Start</string>
    <string name="correct_text">Correct: </string>
    <string name="correct_number">0</string>
    <string name="empty_text">Empty: </string>
    <string name="empty_number">0</string>
    <string name="wrong_text">Wrong: </string>
    <string name="wrong_number">0</string>
    <string name="question_text">Question: </string>
    <string name="question_number">0</string>
    <string name="button_option">Country Name</string>
    <string name="button_next">Next</string>
</resources>