<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/my_background"
    tools:context=".view.FragmentQuiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/correct_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_number"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/empty_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_number"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/wrong_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_number"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"/>
    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp" />
</LinearLayout>